Hello
Put changelog in plain text please
Make sure to clear this after each release

Put changelog here:
-----------------
- Allowed malformed properties in ItemBlockStateTagUtils.getProperty()
- Slightly improved the DataFixerUpper API